Components updated the package files.

--- a/.horde.yml
+++ b/.horde.yml
@@ -11,8 +11,8 @@ authors:
     name: Mike Naberezny
     user: mnaberez
     email: mike@maintainable.com
-    active: true
-    role: false
+    active: false
+    role: lead
   -
     name: Chuck Hagenbuch
     user: chuck
@@ -20,25 +20,25 @@ authors:
     active: false
     role: lead
 version:
-  release: 2.0.7
-  api: 1.1.0
+  release: 3.0.0alpha1
+  api: 3.0.0alpha1
 state:
-  release: stable
-  api: stable
+  release: alpha
+  api: alpha
 license:
   identifier: LGPL-2.1
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
-    php: ^5.3 || ^7
-    pear:
-      pear.horde.org/Horde_Exception: ^2
-      pear.horde.org/Horde_Support: ^2
-      pear.horde.org/Horde_Util: ^2
+    php: ^7
+    composer:
+      horde/exception: ^3
+      horde/support: ^3
+      horde/util: ^3
   optional:
-    pear:
-      pear.horde.org/Horde_Controller: ^2
-      pear.horde.org/Horde_Routes: ^2
-      pear.horde.org/Horde_Test: ^2.1
+    composer:
+      horde/controller: ^3
+      horde/routes: ^3
+      horde/test: ^3
     ext:
       json: '*'
