--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,48 @@
 {
     "name": "horde/view",
     "description": "View pattern library",
-    "type": "library",
+    "type": "horde-library",
     "homepage": "https://www.horde.org/libraries/Horde_View",
     "license": "LGPL-2.1",
     "authors": [
         {
-            "name": "Chuck Hagenbuch",
-            "email": "chuck@horde.org",
-            "role": "lead"
-        },
-        {
             "name": "Mike Naberezny",
             "email": "mike@maintainable.com",
             "role": "lead"
+        },
+        {
+            "name": "Chuck Hagenbuch",
+            "email": "chuck@horde.org",
+            "role": "lead"
         }
     ],
-    "version": "2.0.7",
-    "time": "2017-11-11",
+    "version": "3.0.0alpha1",
+    "time": "2021-02-24",
     "repositories": [
         {
-            "type": "pear",
-            "url": "https://pear.horde.org"
+            "type": "composer",
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
-        "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2",
-        "pear-pear.horde.org/Horde_Support": "^2",
-        "pear-pear.horde.org/Horde_Util": "^2"
+        "horde/horde-installer-plugin": "*",
+        "php": "^7",
+        "horde/exception": "^3",
+        "horde/support": "^3",
+        "horde/util": "^3"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Controller": "^2",
-        "pear-pear.horde.org/Horde_Routes": "^2",
-        "pear-pear.horde.org/Horde_Test": "^2.1",
+        "horde/controller": "^3",
+        "horde/routes": "^3",
+        "horde/test": "^3",
         "ext-json": "*"
-    },
-    "replace": {
-        "pear-pear.horde.org/Horde_View": "2.*",
-        "pear-horde/Horde_View": "2.*"
     },
     "autoload": {
         "psr-0": {
             "Horde_View": "lib/"
+        },
+        "psr-4": {
+            "Horde\\View\\": "src/"
         }
     }
 }
