--- a/doc/Horde/View/changelog.yml
+++ b/doc/Horde/View/changelog.yml
@@ -1,6 +1,6 @@
 ---
-2.0.7:
-  api: 1.1.0
+3.0.0alpha1:
+  api: 3.0.0alpha1
   state:
     release: stable
     api: stable
@@ -8,7 +8,7 @@
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes:
+  notes: ~
 2.0.6:
   api: 1.1.0
   state:
