--- a/composer.json
+++ b/composer.json
@@ -19,26 +19,20 @@
     "version": "2.0.7",
     "time": "2017-11-14",
     "repositories": [
-        {
-            "type": "pear",
-            "url": "https://pear.horde.org"
-        }
     ],
     "require": {
         "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2",
-        "pear-pear.horde.org/Horde_Support": "^2",
-        "pear-pear.horde.org/Horde_Util": "^2"
+        "horde/exception": "^2",
+        "horde/support": "^2",
+        "horde/util": "^2"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Controller": "^2",
-        "pear-pear.horde.org/Horde_Routes": "^2",
-        "pear-pear.horde.org/Horde_Test": "^2.1",
+        "horde/controller": "^2",
+        "horde/routes": "^2",
+        "horde/test": "^2.1",
         "ext-json": "*"
     },
     "replace": {
-        "pear-pear.horde.org/Horde_View": "2.*",
-        "pear-horde/Horde_View": "2.*"
     },
     "autoload": {
         "psr-0": {
